@@ -47,9 +47,6 @@ why3.conf
 /bin/why3.byte
 /bin/why3.opt
 /bin/why3
-/bin/why3ml.byte
-/bin/why3ml.opt
-/bin/why3ml
 /bin/why3ide.byte
 /bin/why3ide.opt
 /bin/why3ide
