@@ -133,3 +133,12 @@ tools
         Andrei: isn't this done?
 
   - Maybe : make something generic for the dialog box with memory.
+
+
+provers
+-------
+
+  - PVS: use a better name for PVS theory when printing a task, e.g.
+    file_theory_goal. Solution: do that when we have idents with origin
+    information (necessary for parsing a task).
+
