@@ -9,7 +9,7 @@
 export WHY3LOADPATH=theories
 
 pgm=$1
-pgml=$2
+pgml=$1
 pgml_options=
 
 goods () {
