@@ -2,7 +2,7 @@
 % \newcommand{\todo}[1]{{\Huge\bfseries TODO: #1}}
 
 \newcommand{\why}{\textsf{Why3}\xspace}
-\newcommand{\whyml}{\textsf{Why3ML}\xspace}
+\newcommand{\whyml}{\textsf{WhyML}\xspace}
 \newcommand{\eg}{\emph{e.g.}\xspace}
 \newcommand{\ie}{\emph{i.e.}\xspace}
 
