@@ -166,7 +166,7 @@ A \why input file is a (possibly empty) list of theories.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \clearpage
-\section{Why3ML Language}\label{sec:syntax:whyml}
+\section{WhyML Language}\label{sec:syntax:whyml}
 
 \subsection{Types}
 
